[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/NPCs/Spawn/Dungeoner.png" type="Texture" id=1]
[ext_resource path="res://sprites/NPCs/Spawn/Dungeoner_indicator.png" type="Texture" id=2]
[ext_resource path="res://scripts/Dungeon NPC.gd" type="Script" id=3]
[ext_resource path="res://scripts/EnterDungeon.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 48.0104

[node name="Dungeon NPC" type="Area2D"]
position = Vector2( 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="NPC" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractArea" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Indicator" type="Sprite" parent="."]
visible = false
position = Vector2( -4.76837e-07, -12 )
scale = Vector2( 0.4375, 0.4375 )
texture = ExtResource( 2 )

[node name="EnterDungeonGUI" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="EnterDungeonGUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="EnterDungeonGUI/GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -10.0
margin_right = 70.0
margin_bottom = 10.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnterDungeonGUI/GUI/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -7.0
margin_right = 52.5
margin_bottom = 7.0
text = "Enter a Dungeon"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Dungeon_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dungeon_NPC_body_exited"]
[connection signal="pressed" from="EnterDungeonGUI/GUI/Button" to="EnterDungeonGUI/GUI/Button" method="_on_Button_pressed"]
